output.txt
Game constants: all default
python3 Wartortle.py
python3 Squirtle.py
python3 Blastoise.py
python3 StrongestPlanetBot.py
Seed: 702811884 Dimensions: 100x100
Init Message sent to player 0.
Init Message sent to player 1.
Init Message sent to player 2.
Init Message sent to player 3.
Init Message received from player 3, python3: can't open file 'Stro.
Init Message received from player 1, Settler.
Init Message received from player 0, Settler.
Init Message received from player 2, Settler.
Turn 1
ERROR: Bot #3: Timeout reading commands for bot; select() result: 0 (max time: 2000 milliseconds).
No input received from bot.
Turn 2
Turn 3
Turn 4
ERROR: Bot #2: Received invalid character 'Traceback (most recent call last):T'. (at character 1.)
Input received from bot:
Traceback (most recent call last):
^
Bot 2 was killed.
Here is the rest of its output (if any):
71019144437\",\"expireTimeMulti\":\"20171019144436\"},\"https://www.howtogeek.com\":{\"rating\":100,\"weight\":6,\"flagmask\":{},\"flags\":{\"shopping\":null,\"social\":null,\"news\":null,\"it\":null,\"corporate\":null,\"pornography\":null,\"violence\":null,\"gambling\":null,\"drugs\":null,\"illegal\":null,\"others\":null},\"phishing\":1,\"phishingDomain\":1,\"is_typo\":false,\"block\":0,\"ttl\":3601,\"ttl_multi\":3600,\"ttl_phishing\":0,\"rating_level\":1,\"expireTime\":\"20171019144437\",\"expireTimeMulti\":\"20171019144436\"},\"howtogeek.com\":{\"rating\":100,\"weight\":6,\"flagmask\":{},\"flags\":{\"shopping\":null,\"social\":null,\"news\":null,\"it\":null,\"corporate\":null,\"pornography\":null,\"violence\":null,\"gambling\":null,\"drugs\":null,\"illegal\":null,\"others\":null},\"phishing\":null,\"phishingDomain\":1,\"is_typo\":false,\"block\":0,\"ttl\":3601,\"ttl_multi\":3600,\"ttl_phishing\":0,\"rating_level\":1,\"expireTime\":\"20171019144437\",\"expireTimeMulti\":\"20171019144436\"},\"https://www.windowscentral.com/how-see-whats-taking-valuable-pc-drive-space\":{\"rating\":-1,\"weight\":-1,\"flagmask\":null,\"flags\":{\"shopping\":null,\"social\":null,\"news\":null,\"it\":null,\"corporate\":null,\"pornography\":null,\"violence\":null,\"gambling\":null,\"drugs\":null,\"illegal\":null,\"others\":null},\"phishing\":1,\"phishingDomain\":1,\"is_typo\":false,\"block\":0,\"ttl\":3601,\"ttl_multi\":3600,\"ttl_phishing\":0,\"rating_level\":0,\"expireTime\":\"20171019144437\",\"expireTimeMulti\":\"20171019144436\"},\"https://www.windowscentral.com\":{\"rating\":-1,\"weight\":-1,\"flagmask\":null,\"flags\":{\"shopping\":null,\"social\":null,\"news\":null,\"it\":null,\"corporate\":null,\"pornography\":null,\"violence\":null,\"gambling\":null,\"drugs\":null,\"illegal\":null,\"others\":null},\"phishing\":1,\"phishingDomain\":1,\"is_typo\":false,\"block\":0,\"ttl\":3601,\"ttl_multi\":3600,\"ttl_phishing\":0,\"rating_level\":0,\"expireTime\":\"20171019144437\",\"expireTimeMulti\":\"20171019144436\"},\"windowscentral.com\":{\"rating\":-1,\"weight\":-1,\"flagmask\":null,\"flags\":{\"shopping\":null,\"social\":null,\"news\":null,\"it\":null,\"corporate\":null,\"pornography\":null,\"violence\":null,\"gambling\":null,\"drugs\":null,\"illegal\":null,\"others\":null},\"phishing\":null,\"phishingDomain\":1,\"is_typo\":false,\"block\":0,\"ttl\":3601,\"ttl_multi\":3600,\"ttl_phishing\":0,\"rating_level\":0,\"expireTime\":\"20171019144437\",\"expireTimeMulti\":\"20171019144436\"},\"http://www.techadvisor.co.uk/how-to/storage/how-free-up-disk-space-on-windows-10-3580427/\":{\"rating\":-1,\"weight\":-1,\"flagmask\":null,\"flags\":{\"shopping\":null,\"social\":null,\"news\":null,\"it\":null,\"corporate\":null,\"pornography\":null,\"violence\":null,\"gambling\":null,\"drugs\":null,\"illegal\":null,\"others\":null},\"phishing\":1,\"phishingDomain\":1,\"is_typo\":false,\"block\":0,\"ttl\":3601,\"ttl_multi\":3600,\"ttl_phishing\":0,\"rat
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             ^
SyntaxError: unexpected character after line continuation character

Original exception was:
Traceback (most recent call last):
  File "Blastoise.py", line 148, in <module>
    runTurn()
  File "Blastoise.py", line 142, in runTurn
    command_queue = shipActions(team_ships,game_map)
  File "Blastoise.py", line 122, in shipActions
    target_planet = closest_friendly_planets[1];
IndexError: list index out of range
--- End bot output ---
Turn 5
Turn 6
Turn 7
Turn 8
Turn 9
Turn 10
Turn 11
Turn 12
Turn 13
Turn 14
Turn 15
Turn 16
Turn 17
Turn 18
Turn 19
Turn 20
Turn 21
Turn 22
Turn 23
Turn 24
Turn 25
Turn 26
Turn 27
Turn 28
Turn 29
Turn 30
Turn 31
Turn 32
Turn 33
Turn 34
Turn 35
Turn 36
Turn 37
Turn 38
Turn 39
Turn 40
Turn 41
Turn 42
Turn 43
Turn 44
Turn 45
Turn 46
Turn 47
Turn 48
Turn 49
Turn 50
Turn 51
Turn 52
Turn 53
Turn 54
Turn 55
Turn 56
Turn 57
Turn 58
Turn 59
Turn 60
Turn 61
Turn 62
Turn 63
Turn 64
Turn 65
Turn 66
Turn 67
Turn 68
Turn 69
Turn 70
Turn 71
Turn 72
Turn 73
Turn 74
Turn 75
Turn 76
Turn 77
Turn 78
Turn 79
Turn 80
Turn 81
Turn 82
Turn 83
Turn 84
Turn 85
Turn 86
Turn 87
